# Jade-Dup-Finder

./: .clang-format  .gitattributes  .gitignore  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  BOOTSTRAP.md  BUILD_SYSTEM_COMPLETION_REPORT.md  CHECKBOX_VISIBILITY_FIX.md  CHECKBOX_VISIBILITY_FIX_UPDATED.md  CMakeLists.txt  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_SUMMARY.md  GIT_COMMIT_SUMMARY.md  GPU_BUILD_ISSUES_RECORD.md  GPU_IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LOCAL_SETTINGS.local.md.example  LOCAL_SETTINGS.md  MANUAL_TESTING_GUIDE.md  MARKDOWN_CLEANUP_COMPLETE.md  MINIMUM_FILE_SIZE_CHANGE.md  Oct19Review.md  PHASE_2_PROGRESS_UPDATE.md  PULL_REQUEST_DESCRIPTION.md  PendingForNov27.md  QUICK_ACTIONS_DEBUG.md  README.md  SCAN_NOT_WORKING_DEBUG.md  SCAN_PROGRESS_TEST.md  SCAN_START_FIX_COMPLETE.md  SIGNAL_SLOT_WIRING_FIX.md  TASK_7_VERIFICATION_CHECKLIST.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TECHNICAL_DEBT_REGISTRY.md  THEME_COMPLIANCE_REPORT.md  TOMORROW_TASKS.md  UI_REVIEW.md  check_theme_compliance.sh  (+11 more)
TasksTracking/: README.md  advanced-detection.md  core-features.md  current-sprint.md  file-type-enhancements.md  performance.md  platform-integration.md  safety-reliability.md  test-status.md  testing-quality.md  ui-ux-features.md
archive/: .gitkeep
backups/testing_infrastructure/deployment_20251018_224118/tests/: CMakeLists.txt  cross_platform_testing.cpp  enhanced_test_runner.h  example_performance_monitoring.cpp  example_performance_testing.cpp  load_stress_testing.cpp  load_stress_testing.h  manual_statistics_test.cpp  performance_benchmark.cpp  performance_monitoring.cpp  test_config.cpp  test_config_template.json  test_data_generator.cpp  workflow_testing.cpp
backups/testing_infrastructure/deployment_20251018_224118/tests/framework/: CMakeLists.txt  advanced_reporting.cpp  parallel_test_executor.h  test_maintenance_tools.cpp
backups/testing_infrastructure/deployment_20251018_224118/tests/integration/: test_error_scenarios.cpp  test_filescanner_hashcalculator.cpp  test_scan_to_delete_workflow.cpp
backups/testing_infrastructure/deployment_20251018_224118/tests/performance/: main_performance_test.cpp  test_hc002c_io_optimization.cpp
backups/testing_infrastructure/deployment_20251018_224118/tests/unit/: main_test.cpp  test_advanced_filter_dialog.cpp  test_file_scanner_coverage.cpp  test_thumbnail_delegate.cpp
backups/testing_infrastructure/deployment_20251018_224118/tests/validation/: integration_deployment_test.cpp  performance_scalability_validator.h  test_suite_validator.cpp
backups/testing_infrastructure/deployment_20251019_115748/tests/validation/: CMakeLists.txt
config/: README.md  build_profiles.example.json  build_profiles_linux-cpu.json  build_profiles_linux-gpu.json  build_profiles_macos-arm64.json  build_profiles_macos-x86_64.json  build_profiles_windows-mingw-cpu.json  build_profiles_windows-msvc-cpu.json  build_profiles_windows-msvc-cuda.json
docs/: API_DESIGN.md  API_FILESCANNER.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE_DESIGN.md  BUILD_SYSTEM_OVERVIEW.md  BUILD_SYSTEM_REFERENCE.md  CLEANUP_ANALYSIS.md  CLONECLEAN_BRAND_GUIDE.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  DISTRIBUTION_SETUP.md  DOCUMENTATION_CLEANUP_OCT_23.md  FILESCANNER_MIGRATION.md  FIX_SELECT_RECOMMENDED_AND_HASH_DISPLAY.md  FIX_SELECT_RECOMMENDED_FINAL.md  FIX_WINDOW_POSITION_PERSISTENCE.md  FORCE_QUIT_FIX_2025-11-25.md  HOUSEKEEPING_FINAL_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  MANUAL_TESTING_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  README.md  REMAINING_TASKS.md  REMAINING_TEST_UPDATES.md  SAFETY_FEATURES_USAGE.md  SELECT_ALL_PERFORMANCE_FIX.md  SESSION_COMPLETE_OCT25.md  STATIC_ANALYSIS_DESIGN.md  TASK_TRACKING_SUMMARY.md  THUMBNAIL_CACHE_USAGE.md  UI_WIRING_AUDIT.md  (+5 more)
tests/: CMakeLists.txt  CMakeLists_test_restore.txt  END_TO_END_TESTING_README.md  ENHANCED_FRAMEWORK_README.md  LOAD_STRESS_TESTING_README.md  PERFORMANCE_BENCHMARKING_README.md  PERFORMANCE_MONITORING_README.md  SECURITY_SAFETY_TESTING_README.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TEST_DATA_MANAGEMENT_README.md  UI_AUTOMATION_README.md  comprehensive_theme_validation.cpp  cross_platform_testing.h  cross_theme_interaction_tests.cpp  enhanced_test_runner.cpp  enhanced_test_runner.h  example_load_stress_testing.cpp  example_performance_benchmark.cpp  example_performance_monitoring.cpp  example_performance_testing.cpp  example_security_safety_testing.cpp  example_visual_theme_testing.cpp  final_theme_validation_test.cpp  load_stress_testing.h  manual_statistics_test.cpp  performance_benchmark.h  performance_benchmarks.cpp  performance_benchmarks.h  performance_monitoring.cpp  performance_monitoring.h  security_audit_testing.cpp  security_audit_testing.h  security_safety_testing.h  simple_checkbox_test.cpp  test_base.cpp  test_base.h  test_checkbox_fixes.cpp  test_checkbox_functionality.cpp  test_config.cpp  test_config.h  (+19 more)
tests/deployment/: DEPLOYMENT_SUMMARY.md  deploy_testing_infrastructure.sh
tests/framework/: ADVANCED_FEATURES_SUMMARY.md  CMakeLists.txt  README.md  advanced_reporting.cpp  example_test_suite.cpp  test_environment.cpp  test_environment.h  test_harness.cpp  test_reporting.cpp  test_reporting.h  test_utilities.cpp
tests/integration/: main_test.cpp  test_comprehensive_theme_compliance.cpp  test_end_to_end_workflow.cpp  test_error_scenarios.cpp  test_filescanner_duplicatedetector.cpp  test_filescanner_hashcalculator.cpp  test_integration_workflow.cpp  test_thememanager_integration.cpp
tests/performance/: main_performance_test.cpp  performance_test_framework.h  test_hc002b_batch_processing.cpp  test_hc002c_io_optimization.cpp
tests/unit/: main_test.cpp  test_duplicate_relationship_widget.cpp  test_exclude_pattern_widget.cpp  test_file_scanner.cpp  test_selection_history_manager.cpp
tests/validation/: integration_deployment_test.cpp  main_performance_scalability.cpp  main_validation.cpp  performance_scalability_validator.cpp
tools/: CMakeLists.txt  README.md  theme_compliance_checker.cpp
(+449 files in other folders)
